--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
         }
 
         body {
-            background-image: linear-gradient(to bottom, blue 50%, green 50%);
+            background-image: url(fundo/fundo.jpg);
             background-attachment: fixed;
             height: 100%;
             margin: 0;
