--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
             border-bottom: 15px solid green;
             margin: 0 auto;
             position: relative;
-            background-image: linear-gradient(blue, white);
+            background-image: url(fundo/fundo.jpg);
             overflow: hidden; /* Impede que o conteúdo ultrapasse os limites */
             padding-top: 50px;
         }
