--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
     <title>Exemplo de Mix Blend Mode</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <style>
+
+       @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+
         * {
             margin: 0;
             padding: 0;
