--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 
+
         * {
             margin: 0;
             padding: 0;
@@ -30,10 +31,8 @@
         }
 
         body {
-            background-image: url('fundo.jpg');
+            background-image: linear-gradient(to bottom, blue 50%, green 50%);
             background-attachment: fixed;
-            background-color: rgba(255, 255, 255, 0.5); /* Cor de fundo com opacidade */
-            background-blend-mode: multiply; /* Aplica a mistura entre a imagem e a cor */
             height: 100%;
             margin: 0;
             padding: 0;
@@ -56,7 +55,7 @@
             border-bottom: 15px solid green;
             margin: 0 auto;
             position: relative;
-            background-image: url('fundo/fundo.jpg');
+            background-image: linear-gradient(blue, white);
             overflow: hidden; /* Impede que o conteúdo ultrapasse os limites */
             padding-top: 50px;
         }
@@ -82,15 +81,14 @@
             position: absolute;
             bottom: 0;
             transition: bottom 0.3s, transform 0.3s;
-            transform: scale(1.5) translateY(-10px);
+            transform: scale(1.5) translateY(-10px); /* Suspende a imagem um pouco para cima */
             left: 25px;
             margin: auto;
             mix-blend-mode: multiply;
-            z-index: 10; /* Garante que a pessoa fique acima do fundo */
         }
 
         .jump {
-            animation: jump 700ms ease-in-out;
+            animation: jump 700ms ease-in-out; /* Aplica o efeito de pulo */
         }
 
         .nuvem {
@@ -114,13 +112,13 @@
                 bottom: 0;
             }
             40% {
-                bottom: 200px;
+                bottom: 200px; /* Altura máxima do pulo */
             }
             60% {
-                bottom: 200px;
+                bottom: 200px; /* Mantém a altura máxima por mais tempo */
             }
             100% {
-                bottom: 0;
+                bottom: 0; /* Volta ao chão */
             }
         }
 
@@ -192,27 +190,4 @@
                 width: 300px;
             }
         }
-
-        /* Adicionando um pseudo-elemento para o fundo com blend */
-        .pessoa::after {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-image: url('fundo.jpg');
-            background-size: cover;
-            mix-blend-mode: multiply;
-            z-index: -1; /* Coloca o pseudo-elemento atrás da pessoa */
-        }
-    </style>
-</head>
-<body>
-    <div class="gamer-board">
-        <div id="timer">00:00</div>
-        <div class="pessoa"></div>
-        <button>Iniciar</button>
-    </div>
-</body>
-</html>
+ 
